hard-gists/5866756/run.log
=== Docker Run Log for 5866756 ===
Started at: Mi 29. Okt 16:07:38 CET 2025

[2025-10-29 16:07:39] START: Running container for 5866756
[2025-10-29 16:07:39] SUCCESS: Container bd01239563859faffa80892b54d762f6bfe89869ef9a6dab7f7d9b706bea2463 started for 5866756
=== Container logs for 5866756 ===
  File "/snippet.py", line 373
    except OSError, err:
           ^^^^^^^^^^^^
SyntaxError: multiple exception types must be parenthesized
=== End of logs for 5866756 ===
[2025-10-29 16:07:41] INFO: Container bd01239563859faffa80892b54d762f6bfe89869ef9a6dab7f7d9b706bea2463 has stopped
